Mon Sep 15 18:53:06 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/rules, debian/pseudo-tags: Install
    /usr/share/doc/dpkg/pseudo-tags, which talks about the bug titling we
    use to mark bugs for filtering in the Debian bts.

Mon Sep 15 18:48:39 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-buildpackage.sh: Call debian/rules -qn build-arch, and if
    it's available, modify -B handling appropriately.  If build-arch is not
    available, then when -B was called, do *not* pass -B on to
    dpkg-checkbuilddeps.

Sun Sep 14 21:45:44 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in: Fix broken os_type detection on linux.

Sun Sep 14 21:44:01 CDT 2003 Adam Heath <doogie@debian.org>

  * po/ca.po: Updated.

Sun, 14 Sep 2003 21:16:18 -0500 Adam Heath <doogie@debian.org>

  * scripts/controllib.pl, scripts/dpkg-checkbuilddeps.pl: Moved dependency
    parsing logic from dpkg-checkbuilddeps.  The dpkg-checkbuilddeps parser
    didn't support empty fields, while the controllib parser did.
  * scripts/controllib.pl:
    * Dependency fields are now parsed into a nested list structure.
    * All dependency fields now support [arch] constructs.  Those that
      don't apply for the current host_arch are removed during parsing.
    * Comment lines(those that start with '#') are ignored during parsing.
    * Store the original field's casing with 'o:' prepended in %fi.
  * scripts/dpkg-checkbuilddeps.pl:  Because of the above controllib.pl
    changes, this script is much simpler now.
  * scripts/dpkg-gencontrol.pl:     
    * Use the original casing of field names when reporting unknown fields.
  * scripts/dpkg-gencontrol.pl, scripts/controllib.pl: After opening files,
    set binmode.

Sun Sep 14 17:24:20 CDT 2003 Adam Heath <doogie@debian.org>

  * dselect/{Makefile.in,helpmsgs.{cc,h,src},mkhelpmsgs.pl,.cvsignore}:
    No longer generate helpmsgs.{cc,h}.

Sun Sep 14 16:53:09 CDT 2003 Adam Heath <doogie@debian.org>
