@@ -1,5 +1,9 @@
 dpkg (1.10.11) unstable; urgency=low
 
+  * dpkg no longer provides any BYHAND files.  If you need the source
+    tarball, use the orig.tar.gz file available in the pool.  The
+    precompiled tars were hold-overs from when debs were not standard
+    ar/tar files.
   * Install /usr/share/doc/dpkg/pseudo-tags, which talks about the bug
     titling we use to mark bugs for filtering in the Debian bts.
   * Updated ca.po.
