@@ -1,3 +1,8 @@
+Mon Sep 15 19:08:28 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/rules: No longer generate any BYHAND files.  Also, fix bug in
+    pseudo-tags installation.
+
 Mon Sep 15 18:53:06 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/rules, debian/pseudo-tags: Install
